PyQuest/src/test/parsing/valid/test007.ql
// Form with two questions with the same identifier
form label {
  "Question?"
    var: boolean

  "Question?"
    var: boolean
}
