PyQuest/src/test/parsing/invalid/test018.ql
form label {
    if () {
        "Question?"
        id : boolean
    }
}